# tinybot_description

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: display.rviz
launch/: display.launch  gazebo.launch  rviz.launch  upload.launch  view.launch
meshes/: base_link.STL  link1.STL  link2.STL  link4.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
urdf/: common.gazebo.xacro  tinybot.gazebo.xacro  tinybot.transmission.xacro  tinybot.urdf  tinybot.urdf.xacro  tinybot_macro.xacro  tinybot_robot.xacro
