<?xml version="1.0"?>
<package format="2">
  <name>tinybot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for arc100ic</p>
    <p>This package contains configuration data, 3D models and launch files for TinyBot robot in ROS</p>
  </description>
  <author>TexnoMann</author>
  <maintainer email="antipov.vl.a@yandex.ru" />
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
